--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -3,12 +3,15 @@
 .kiwi-wrap {
     font-family: Source Sans Pro, Helvetica, sans-serif;
     color: #2c3e50;
-    background: #fff;
 }
 
 .kiwi-workspace:before {
     /* The top bar at the top of the startup page */
     background: -webkit-linear-gradient(left, #BDDE6B 0%,#BDDE6B 20%, #7DBD67 20%, #7DBD67 40%,#ECED77 40%,#ECED77 60%,#F6C358 60%,#F6C358 80%,#F66B58 80%) 0 0 no-repeat;
+}
+
+.kiwi-workspace-background {
+    background: #fff;
 }
 
 .u-link {
