--- a/static/themes/common/layout.css
+++ b/static/themes/common/layout.css
@@ -464,9 +464,16 @@ p {
  * Message list
  */
 
-.kiwi-messagelist-message {
+.kiwi-messagelist-message,
+.kiwi-messageinfo {
     line-height: 1.5em;
     margin: 0 3px;
+}
+@media screen and (max-width: 700px) {
+    .kiwi-messagelist-message,
+    .kiwi-messageinfo {
+        margin: 0;
+    }
 }
 .kiwi-messagelist-message-whois {
 }
