--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -1,4 +1,4 @@
-@import '../common/layout.css';
+@import '../common/layout.css?cb=1';
 
 .kiwi-wrap {
     font-family: Source Sans Pro, Helvetica, sans-serif;
@@ -308,6 +308,9 @@
 .kiwi-messagelist-message--hover {
     background: #e3f1d4;
     border-left-color: #80ab52;
+}
+.kiwi-messagelist-message--info-open {
+    background: #f6f6f6;
 }
 
 .kiwi-messagelist-message > div {
