--- a/static/themes/common/layout.css
+++ b/static/themes/common/layout.css
@@ -464,8 +464,7 @@ p {
  * Message list
  */
 
-.kiwi-messagelist-message,
-.kiwi-messageinfo {
+.kiwi-messagelist-message {
     line-height: 1.5em;
     margin: 0 3px;
 }
@@ -481,7 +480,9 @@ p {
 }
 .kiwi-messagelist-message--hover {
 }
-.kiwi-messagelist-message > div {
+.kiwi-messagelist-time,
+.kiwi-messagelist-nick,
+.kiwi-messagelist-body {
     padding: 2px 4px;
 }
 
