Styling vars read from the stylesheet

--- a/static/themes/common/layout.css
+++ b/static/themes/common/layout.css
@@ -3,6 +3,7 @@
     font-size: 14px;
     line-height: 1.6em;
     -webkit-font-smoothing: antialiased;
+    --kiwi-nick-brightness: 50;
 }
 
 .kiwi-workspace:before {
