--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -437,6 +437,26 @@ h1, h2, h3, h4, h5, h6 {
 
 
 /**
+ * Channel list
+ */
+.kiwi-channellist table tbody tr:nth-child(even) {
+    background-color: #333333;
+}
+.kiwi-channellist table tbody tr {
+    border-top: 1px solid #464646;
+}
+.kiwi-channellist-users {
+    width: 80px;
+    background: #7dbd67;
+    padding: 2px 0;
+    border-radius: 3px;
+    text-align: center;
+    color: #333333;
+}
+
+
+
+/**
  * Welcome startup screen
  */
 
