--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -449,6 +449,25 @@
 
 
 /**
+ * Channel list
+ */
+.kiwi-channellist table tbody tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+.kiwi-channellist table tbody tr {
+    border-top: 1px solid lightgray;
+}
+.kiwi-channellist-users {
+    width: 80px;
+    background: #7dbd67;
+    padding: 2px 0;
+    border-radius: 3px;
+    text-align: center;
+}
+
+
+
+/**
  * Welcome startup screen
  */
 
