--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -290,6 +290,12 @@ h1, h2, h3, h4, h5, h6 {
     /* some message highlights add a left border so add a default invisble one to keep them inline */
     border-left: 3px solid transparent;
 }
+.kiwi-messagelist-message--modern {
+    border-left: 7px solid transparent;
+}
+.kiwi-messagelist-message--modern.kiwi-messagelist-message-topic {
+    margin: 18px;
+}
 .kiwi-messagelist-message-whois {
     border-left-color: #939393;
 }
