--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -150,7 +150,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .kiwi-statebrowser-channel-label {
+    color: #efefef;
     background: green;
+}
+.kiwi-statebrowser-channel-label--highlight {
+    background: #d62323;
 }
 
 .kiwi-statebrowser-channel-label-transition-enter-active, .kiwi-statebrowser-channel-label-transition-leave-active {
