--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -409,6 +409,9 @@
  * Network settings
  */
 
+.kiwi-networksettings-error {
+    border: 1px dashed #d86f6f;
+}
 .kiwi-networksettings-danger h3 {
     background: #d86f6f;
 }
