Only showing link preview chevrons on non-touch devices

--- a/static/themes/common/layout.css
+++ b/static/themes/common/layout.css
@@ -592,6 +592,11 @@ div {
 
 /* Links */
 .kiwi-messagelist-message-linkhandle {
+    margin-left: 4px;
+    font-size: 0.8em;
+}
+.kiwi-wrap--touch .kiwi-messagelist-message-linkhandle {
+    display: none;
 }
 
 /* Errors */
