--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -477,6 +477,9 @@
 .kiwi-welcome-simple-start[disabled] {
     opacity: 0.65;
 }
+.kiwi-welcome-simple-error {
+    border: 1px dashed #d86f6f;
+}
 
 
 
