--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -450,6 +450,19 @@ h1, h2, h3, h4, h5, h6 {
 
 
 /**
+ * Self user box
+ */
+.kiwi-selfuser-actions {
+    border-top: 1px solid #484747;
+}
+.kiwi-controlinput-selfuser {
+    /* background: #f6f6f6;*/ 
+    border: 1px solid #484747;
+}
+
+
+
+/**
  * Channel list
  */
 .kiwi-channellist table tbody tr:nth-child(even) {
