--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -147,8 +147,7 @@
     color: #d03232;
 }
 .kiwi-statebrowser-channel-active .kiwi-statebrowser-channel-name {
-    border-left: 3px solid #df6b26;
-    padding-left: 5px;
+    color: #df6b26;
 }
 
 .kiwi-statebrowser-channel-label {
