Improving ControlInput user experience for mobiles.

--- a/static/themes/common/layout.css
+++ b/static/themes/common/layout.css
@@ -452,6 +452,11 @@ div {
     font-weight: bold;
     text-align: center;
 }
+@media screen and (max-width: 500px) {
+    .kiwi-controlinput-user-nick {
+        display: none;
+    }
+}
 .kiwi-controlinput-tools {
     margin-left: 10px;
 }
