--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -388,6 +388,13 @@
     border-left-color: #ab5252;
 }
 
+.kiwi-messagelist-message-connection-connected {
+    color: #009900;
+}
+.kiwi-messagelist-message-connection-disconnected {
+    color: #900;
+}
+
 
 
 /**
