--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -49,21 +49,21 @@
     color: gray;
 }
 .input-text--focus {
-    border-color: #42b983;
+    border-color: #86b32d;
 }
 .input-text-underline {
     border-color: #a9a9a9;
 }
 .input-text-underline-active {
-    background: #42b983;
+    background: #86b32d;
 }
 
 .u-form .u-input,
 .u-form textarea {
     border: 1px solid #cccccc;
-    border-bottom: 2px solid #42b983;
+    border-bottom: 2px solid #86b32d;
     background: #ffffff;
-    outline-color: #42b983;
+    outline-color: #86b32d;
 }
 
 .u-tabbed-view-tabs {
@@ -504,6 +504,3 @@
 .kiwi-welcome-simple-error {
     border: 1px dashed #d86f6f;
 }
-
-
-
