--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -378,6 +378,12 @@ h1, h2, h3, h4, h5, h6 {
     border-left-color: #650505;
 }
 
+/*
+ * Disconnect Message
+ */
+ .kiwi-notconnected {
+     background-color: #201F1F;
+}
 
 /**
  * Message list
@@ -456,7 +462,7 @@ h1, h2, h3, h4, h5, h6 {
     border-top: 1px solid #484747;
 }
 .kiwi-controlinput-selfuser {
-    /* background: #f6f6f6;*/ 
+    /* background: #f6f6f6;*/
     border: 1px solid #484747;
 }
 
